<resources>
    <string name="app_name">FragmentsLab</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="red_fragment_button">Red Fragment</string>
    <string name="green_fragment_button">Green Fragment</string>
    <string name="blue_fragment_button">Blue Fragment</string>
    <string name="purple_uw">UW purple</string>
    <string name="gold_uw">UW gold</string>

</resources>
